--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "cv",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
+    "watch": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules",
+    "hmr": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -20,12 +23,6 @@
   },
   "homepage": "https://github.com/shouldnt/CV#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
-    "gulp": "^3.9.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-sass": "^3.1.0",
-    "lost": "^7.1.1"
+    "laravel-mix": "^0.7.2"
   }
 }
